--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,12 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+config/database.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
 /public/uploads/
 config/secrets.yml
+Gemfile.lock
+db/schema.rb
