--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,4 @@
+Header set Access-Control-Allow-Origin "*"
 Access-Control-Allow-Origin "http://chinesevegansociety.cdn.smjjl.com"
 Access-Control-Allow-Origin "http://chinesevegansociety.com"
 Access-Control-Allow-Origin "http://www.chinesevegansociety.com"
